# api/docs/swagger.json
@@ -38,6 +38,13 @@
                         "description": "search",
                         "name": "search",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "journal_id",
+                        "name": "journal_id",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -1906,9 +1913,6 @@
         "editory_submission_genproto_content_service.Article": {
             "type": "object",
             "properties": {
-                "article_type": {
-                    "type": "string"
-                },
                 "author_id": {
                     "type": "string"
                 },
@@ -1918,6 +1922,12 @@
                 "description": {
                     "type": "string"
                 },
+                "files": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/editory_submission_genproto_content_service.File"
+                    }
+                },
                 "id": {
                     "type": "string"
                 },
@@ -1926,25 +1936,34 @@
                 },
                 "title": {
                     "type": "string"
+                },
+                "type": {
+                    "type": "string"
                 }
             }
         },
         "editory_submission_genproto_content_service.CreateArticleReq": {
             "type": "object",
             "properties": {
-                "article_type": {
-                    "type": "string"
-                },
                 "author_id": {
                     "type": "string"
                 },
                 "description": {
                     "type": "string"
                 },
+                "files": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/editory_submission_genproto_content_service.File"
+                    }
+                },
                 "journal_id": {
                     "type": "string"
                 },
                 "title": {
+                    "type": "string"
+                },
+                "type": {
                     "type": "string"
                 }
             }
@@ -1971,6 +1990,26 @@
                     "type": "integer"
                 },
                 "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "editory_submission_genproto_content_service.File": {
+            "type": "object",
+            "properties": {
+                "article_id": {
+                    "type": "string"
+                },
+                "draft_id": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string"
+                },
+                "url": {
                     "type": "string"
                 }
             }
